# GiiGaLauncher

./: .gitignore  Cargo.toml  build.rs  logging.conf
.github/workflows/: main.yml
GiiGa/: imgui.ini  logging.conf
GiiGa/EditorData/: icon_source.txt
GiiGa/EditorData/ScriptHelpers/: GiiGaPy.pyi  GiiGaPyHelpers.py  sgen.py
GiiGa/EditorData/ScriptHelpers/GiiGaPy/: GOAP.pyi
GiiGa/Shaders/: BufferWireframeShader.hlsl  CascadeShadowGeomShader.hlsl  CascadeShadowShader.hlsl  GBufferOpaqueDefaultLitPixelShader.hlsl  GBufferOpaqueUnlitPixelShader.hlsl  GBufferWireframeShader.hlsl  GDirectionalLight.hlsl  GLightHeader.hlsl  GPointLight.hlsl  GammaCorrectionShader.hlsl  MaterialHeader.hlsl  OpaqueUnlitPixelShader.hlsl  ShaderHeader.hlsl  VertexFullQuadShader.hlsl  VertexPNTBTShader.hlsl  VertexPositionShader.hlsl
GiiGa/TemplateProject/: database.json  project.giga
GiiGa/TemplateProject/Assets/: DefaultLevel.level  DefaultLitMaterial.mat  DefaultMaterial.mat  PyBeh1.py  PyBeh2.py  Sphere.prefab  cube.fbx  quad.fbx  sphere.fbx
GiiGa/TemplateProject/Assets/GiiGaPy/: __init__.pyi
GiiGa/TemplateProject/Assets/GrassPlane/: GrassPlane.fbx  GrassPlane.prefab  Material.001.mat
GiiGa/TemplateProject/Assets/Scripts/: Agent.py  BlackBoard.py  CreatePyCompRuntime.py  CreateStaticMeshCompRuntime.py  GOAPBrain.py  Predicates.py  Projectile.py  PyAction.py  PyBeh1.py  PyBeh2.py  textGOAPdemo.py
src/: main.rs  project.rs
src/launcher/: component.rs  mod.rs  settings.rs
