[package]
name = "giga-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["highlighter", "tokio", "debug"]}

chrono = { version = "0.4.39", features = ["serde"] }
rfd = "0.15.1"
tokio = { version = "1.0.0", features = ["full"] }

serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
async-recursion = "1.1.1"

tracing = "0.1.40"
tracing-subscriber = "0.3.0"